--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -381,12 +381,19 @@ section {
   background: url(../img/hero-bg.png) top center no-repeat;
   background-size: cover;
 }
+.hero h3 {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: #012970;
+}
 .hero h1 {
   margin: 0;
   font-size: 48px;
   font-weight: 700;
   color: #012970;
 }
+
 .hero h2 {
   color: #444444;
   margin: 15px 0 0 0;
