--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,14 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width:700px) {
+  .navs {
+    margin: 3%;
   }
 }
